--- a/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
+++ b/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
@@ -72,6 +72,7 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileManager.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
