--- a/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
+++ b/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <Compile Include="FileManager.cs" />
     <Compile Include="GameObject.cs" />
+    <Compile Include="Level.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
