--- a/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
+++ b/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <Compile Include="Background.cs" />
     <Compile Include="Chunk.cs" />
+    <Compile Include="ComboCount.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="Explosion.cs" />
     <Compile Include="FileManager.cs" />
