--- a/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
+++ b/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Game1.cs" />
     <Compile Include="TextEffect.cs" />
     <Compile Include="Tile.cs" />
+    <Compile Include="TilesheetManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
