Made basic UI and made sure that lives never goes negative

--- a/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
+++ b/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
@@ -93,6 +93,7 @@
     <Compile Include="TextEffect.cs" />
     <Compile Include="Tile.cs" />
     <Compile Include="TilesheetManager.cs" />
+    <Compile Include="Ui.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
