--- a/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
+++ b/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
@@ -76,6 +76,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Background.cs" />
+    <Compile Include="Boss.cs" />
     <Compile Include="Chunk.cs" />
     <Compile Include="ComboCount.cs" />
     <Compile Include="Enemy.cs" />
