--- a/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
+++ b/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Explosion.cs" />
     <Compile Include="FileManager.cs" />
     <Compile Include="GameObject.cs" />
+    <Compile Include="Gib.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="Particle.cs" />
     <Compile Include="Player.cs" />
