Allied ship implmented, needs smoothing

--- a/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
+++ b/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
@@ -75,6 +75,7 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlliedShip.cs" />
     <Compile Include="Background.cs" />
     <Compile Include="Boss.cs" />
     <Compile Include="Chunk.cs" />
