--- a/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
+++ b/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
@@ -84,6 +84,7 @@
     <Compile Include="FileManager.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="Level.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="Particle.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PowerUp.cs" />
