--- a/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
+++ b/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Game1.cs" />
     <Compile Include="SoundManager.cs" />
     <Compile Include="SpawnManager.cs" />
+    <Compile Include="TextBox.cs" />
     <Compile Include="TextEffect.cs" />
     <Compile Include="Tile.cs" />
     <Compile Include="TilesheetManager.cs" />
