--- a/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
+++ b/FinalSpelProject/FinalSpelProject/FinalSpelProject/FinalSpelProject.csproj
@@ -89,6 +89,7 @@
     <Compile Include="GameObject.cs" />
     <Compile Include="Gib.cs" />
     <Compile Include="Globals.cs" />
+    <Compile Include="HighscoreScreen.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="LevelManager.cs" />
     <Compile Include="Loot.cs" />
